# rust-dev-test

./: .env  Cargo.toml  README.md  text.txt
axum-test/: Cargo.toml
axum-test/src/: main.rs
bytes-test/: Cargo.toml
bytes-test/src/: main.rs
chrono-test/: Cargo.toml
chrono-test/docker/: docker-compose.yml
chrono-test/src/: main.rs
dotenvy-test/: Cargo.toml  README.md
dotenvy-test/src/: main.rs
migrations/: 20240306141627_first.sql
simple-chrono/: Cargo.toml
simple-chrono/src/: main.rs
stds/src/: channel.rs  collecgtions.rs  iter_test.rs  lamda.rs  main.rs
