[package]
name = "chrono-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.34", features = ["serde"] }
sqlx ={ version = "*", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
serde = {version = "*", features = ["derive"] }
serde_json = "*"
dotenvy = "*"
tokio = {version = "*", features = ["full"] }